--- a/plover.cfg
+++ b/plover.cfg
@@ -1,6 +1,6 @@
 [System: English Stenotype]
 keymap[keyboard] = [["#", ["1", "2", "3", "4", "5", "6", "7", "8", "9", "0", "-", "="]], ["S-", ["q", "a"]], ["T-", ["w"]], ["K-", ["s"]], ["P-", ["e"]], ["W-", ["d"]], ["H-", ["r"]], ["R-", ["f"]], ["A-", ["v"]], ["O-", ["b"]], ["*", ["t", "y", "g", "h"]], ["-E", ["n"]], ["-U", ["m"]], ["-F", ["u"]], ["-R", ["j"]], ["-P", ["i"]], ["-B", ["k"]], ["-L", ["o"]], ["-G", ["l"]], ["-T", ["p"]], ["-S", [";"]], ["-D", ["["]], ["-Z", ["'"]], ["arpeggiate", ["space"]], ["no-op", ["\\", "]", "z", "x", "c", ",", ".", "/"]]]
-dictionaries = [{"enabled": true, "path": "~\\downloads\\typey-type.json"}, {"enabled": true, "path": "user.json"}, {"enabled": true, "path": "commands.json"}, {"enabled": true, "path": "main.json"}]
+dictionaries = [{"enabled": true, "path": "typey-type.json"}, {"enabled": true, "path": "user.json"}, {"enabled": true, "path": "commands.json"}, {"enabled": true, "path": "main.json"}]
 
 [Machine Configuration]
 machine_type = Gemini PR
@@ -10,7 +10,7 @@ auto_start = True
 baudrate = 9600
 bytesize = 8
 parity = N
-port = COM7
+port = COM5
 stopbits = 1
 timeout = 2.0
 
